Fixed overflow on admin pages.

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -1,4 +1,5 @@
 body {
+    overflow: unset;
     background-color: #212c3d !important;
 }
 
